samples/_failures_safe/1761352741_56ca32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfb27a86.c: In function ‘main’:
./samples/SAFE/__tmp_cfb27a86.c:171:9: error: expected expression at end of input
  171 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_cfb27a86.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cfb27a86.c:171:9: error: expected declaration or statement at end of input
